# audio-to-text

./: README.md  SKILL.md  install.sh  pyproject.toml
.claude/commands/: stt.md
.claude/skills/audio-to-text/: SKILL.md
audio_to_text/: __init__.py  cli.py  io.py  media.py
audio_to_text/stt/: __init__.py  faster_whisper_engine.py
audio_to_text/subtitles/: __init__.py  srt.py
