[project]
name = "audio-to-text"
version = "0.1.0"
description = "Transcribe audio/video to SRT subtitles using faster-whisper."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "httpx[socks]>=0.28.1",
    "rich>=13.9.0",
    "typer>=0.12.3",
]

[project.scripts]
att = "audio_to_text.cli:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_to_text"]
